--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,160 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bg-orange {
+  transition: 0.25s;
+  background-color: rgb(236, 98, 0) !important;
+}
+
+.bg-orange:hover {
+  background-color: rgb(202, 84, 0) !important;
+}
+
+.bg-header {
+  background-image: linear-gradient(120deg, #00527b, #00112d);
+}
+
+.bg-depo {
+  background-image: linear-gradient(#00527b, #00112d 50%, transparent);
+}
+
+.bg-blue {
+  background-color: #00527b;
+}
+
+.text-blue-light {
+  color: #0077b3;
+}
+
+.text-orange {
+  color: #e64017;
+}
+
+.divider {
+  height: 10px;
+  width: 100%;
+  background-image: linear-gradient(140deg, #ffa80c, #e64017);
+}
+
+.aspect-ratio-1 {
+  aspect-ratio: 1;
+}
+
+.aspect-ratio-16 {
+  aspect-ratio: 16/9;
+}
+
+.vertical-video {
+  transition: 0.25s;
+  overflow: hidden;
+  width: 100%;
+  aspect-ratio: 9/16;
+  background-color: #00527b;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.vertical-video:hover {
+  transform: scale(110%);
+}
+
+.vertical-video::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 68px;
+  background-image: linear-gradient(#000, transparent);
+}
+
+.tiny-text {
+  font-size: 12px;
+}
+
+.btn-active {
+  background-color: rgb(236, 98, 0) !important;
+  color: white !important;
+}
+
+/* Estilo base para os links do menu dropdown */
+.navbar .dropdown-menu {
+  background-color: transparent; /* Manter o fundo transparente */
+}
+
+.navbar .dropdown-item {
+  color: white; /* Texto branco */
+  background-color: transparent; /* Fundo transparente */
+}
+
+.navbar .dropdown-item:hover,
+.navbar .dropdown-item:focus {
+  background-color: rgba(255, 255, 255, 0.1); /* Fundo levemente escurecido */
+}
+
+/* CSS específico para page.ejs */
+body.page-template .navbar .dropdown-menu {
+  background-color: black !important; /* Cor de fundo branca */
+}
+
+body.page-template .navbar .dropdown-item {
+  color: white; /* Texto preto */
+}
+
+body.page-template .navbar .dropdown-item:hover,
+body.page-template .navbar .dropdown-item:focus {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+/* Estilização da tabela */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 20px 0;
+  font-size: 1em;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+table thead tr {
+  /* background-color: rgba(236, 98, 0, 0.8); */
+  background: linear-gradient(120deg, #00527b, #00112d); /* Gradiente azul */
+  color: #ffffff;
+  text-align: left;
+  font-weight: bold;
+}
+
+table th,
+table td {
+  padding: 12px 15px;
+}
+
+table tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+
+table tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+}
+
+table tbody tr:last-of-type {
+  border-bottom: 2px solid rgb(236, 98, 0); /* Cor laranja */
+}
+
+/* Estilização do <caption> */
+.wp-element-caption {
+  caption-side: bottom;
+  padding: 10px;
+  font-size: 0.9em;
+  font-weight: bold;
+  text-align: left;
+  color: rgb(236, 98, 0);
+  margin-top: -30px; /* Aproxima a legenda da tabela */
+}
+
+@media (max-width: 1024px) {
+  .nav-link {
+    width: 100%;
+  }
+}
