--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -153,6 +153,10 @@ table tbody tr:last-of-type {
   margin-top: -30px; /* Aproxima a legenda da tabela */
 }
 
+.background-gradient {
+  background-image: linear-gradient(120deg, #00527b, #00112d);
+}
+
 @media (max-width: 1024px) {
   .nav-link {
     width: 100%;
