--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -207,3 +207,16 @@ table tbody tr:last-of-type {
   padding-left: 1.5em;
   margin-bottom: 1em;
 }
+
+.img-diretor img {
+  height: 400px;
+}
+
+@media (max-width: 768px) {
+  .img-diretor img {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-radius: 20px !important;
+    height: auto;
+  }
+}
